packages/yew-router-macro/tests/routable_derive/struct-fail.stderr
error: expected enum, found struct
 --> $DIR/struct-fail.rs:2:1
  |
2 | struct Test {}
  | ^^^^^^
