packages/yew-router-macro/tests/routable_derive/struct-fail.rs
#[derive(yew_router::Routable)]
struct Test {}

fn main() {}
